Check system Keystone version to offer recovery in the UI when system Keystone is broken. Refactored a bit KeystoneGlue implementation. Added unit tests.

Bug: 658993
Change-Id: I16870fc37e1f71772848240f0ae397d6aa13b2e5
Reviewed-on: https://chromium-review.googlesource.com/1044527
Commit-Queue: Boris Vidolov <borisv@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556647}