chrome/browser/mac/keystone_glue_unittest.mm
@@ -175,6 +175,12 @@ namespace ksr = keystone_registration;
 
 @end
 
+@interface KeystoneGlue (PrivateMethods)
+
++ (BOOL)isValidSystemKeystone:(NSDictionary*)systemKeystonePlistContents
+            comparedToBundled:(NSDictionary*)bundledKeystonePlistContents;
+
+@end
 
 namespace {
 
@@ -226,6 +232,89 @@ TEST_F(KeystoneGlueTest, DISABLED_BasicUse) {
   [glue checkForUpdate];
   [glue installUpdate];
   ASSERT_TRUE([glue confirmCallbacks]);
+}
+
+TEST_F(KeystoneGlueTest, isValidSystemKeystone_Nils) {
+  ASSERT_TRUE([KeystoneGlue isValidSystemKeystone:nil comparedToBundled:nil]);
+}
+
+TEST_F(KeystoneGlueTest, isValidSystemKeystone_Nil_Bundled) {
+  ASSERT_TRUE([KeystoneGlue isValidSystemKeystone:@{} comparedToBundled:nil]);
+}
+
+TEST_F(KeystoneGlueTest, isValidSystemKeystone_Empty_Bundled) {
+  ASSERT_TRUE([KeystoneGlue isValidSystemKeystone:@{} comparedToBundled:@{}]);
+}
+
+TEST_F(KeystoneGlueTest, isValidSystemKeystone_Bad_Bundled) {
+  ASSERT_TRUE(
+      [KeystoneGlue isValidSystemKeystone:@{} comparedToBundled:@{
+        @[] : @2
+      }]);
+}
+
+TEST_F(KeystoneGlueTest, isValidSystemKeystone_Bad_Bundled_Version) {
+  ASSERT_TRUE([KeystoneGlue isValidSystemKeystone:@{}
+      comparedToBundled:@{
+        @"CFBundleVersion" : @1
+      }]);
+}
+
+TEST_F(KeystoneGlueTest, isValidSystemKeystone_Bad_Bundled_Version_String) {
+  ASSERT_TRUE([KeystoneGlue
+      isValidSystemKeystone:@{}
+          comparedToBundled:@{@"CFBundleVersion" : @"Hi how are you?"}]);
+}
+
+TEST_F(KeystoneGlueTest, isValidSystemKeystone_Nil_System_Keystone) {
+  ASSERT_FALSE([KeystoneGlue
+      isValidSystemKeystone:nil
+          comparedToBundled:@{@"CFBundleVersion" : @"1.2.3"}]);
+}
+
+TEST_F(KeystoneGlueTest, isValidSystemKeystone_Empty_System_Keystone) {
+  ASSERT_FALSE([KeystoneGlue
+      isValidSystemKeystone:@{}
+          comparedToBundled:@{@"CFBundleVersion" : @"1.2.3"}]);
+}
+
+TEST_F(KeystoneGlueTest, isValidSystemKeystone_Bad_System_Keystone) {
+  ASSERT_FALSE([KeystoneGlue
+      isValidSystemKeystone:@{@"foo" : @"bar"}
+          comparedToBundled:@{@"CFBundleVersion" : @"1.2.3"}]);
+}
+
+TEST_F(KeystoneGlueTest, isValidSystemKeystone_Bad_System_Keystone_Version) {
+  ASSERT_FALSE([KeystoneGlue
+      isValidSystemKeystone:@{
+        @"CFBundleVersion" : @[]
+      }
+          comparedToBundled:@{@"CFBundleVersion" : @"1.2.3"}]);
+}
+
+TEST_F(KeystoneGlueTest,
+       isValidSystemKeystone_Bad_System_Keystone_Version_String) {
+  ASSERT_FALSE([KeystoneGlue
+      isValidSystemKeystone:@{@"CFBundleVersion" : @"I am baddy."}
+          comparedToBundled:@{@"CFBundleVersion" : @"1.2.3"}]);
+}
+
+TEST_F(KeystoneGlueTest, isValidSystemKeystone_Bad_System_Keystone_Outdated) {
+  ASSERT_FALSE([KeystoneGlue
+      isValidSystemKeystone:@{@"CFBundleVersion" : @"1.2.2.15"}
+          comparedToBundled:@{@"CFBundleVersion" : @"1.2.3"}]);
+}
+
+TEST_F(KeystoneGlueTest, isValidSystemKeystone_Bad_System_Keystone_Same) {
+  ASSERT_TRUE([KeystoneGlue
+      isValidSystemKeystone:@{@"CFBundleVersion" : @"1.2.3.4"}
+          comparedToBundled:@{@"CFBundleVersion" : @"1.2.3.4"}]);
+}
+
+TEST_F(KeystoneGlueTest, isValidSystemKeystone_Bad_System_Keystone_Newer) {
+  ASSERT_TRUE([KeystoneGlue
+      isValidSystemKeystone:@{@"CFBundleVersion" : @"1.2.4.1"}
+          comparedToBundled:@{@"CFBundleVersion" : @"1.2.3.4"}]);
 }
 
 }  // namespace
